chore(release): 更新发布工作流配置
- 升级 actions/create-release 动作版本至 v1.1.4
- 调整发布名称格式，移除前缀 "Release "
- 修改 APK 资源文件名，添加 "-signed" 后缀以区分签名状态
- 保持上传未签名 APK 的步骤不变

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,12 +64,12 @@ jobs:
         
     - name: 创建 Release
       id: create_release
-      uses: actions/create-release@v1
+      uses: actions/create-release@v1.1.4
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUBTOKEN }}
       with:
         tag_name: ${{ env.TAG_NAME }}
-        release_name: Release ${{ env.VERSION_NAME }}
+        release_name: ${{ env.VERSION_NAME }}
         draft: false
         prerelease: ${{ env.PRE_RELEASE }}
         
@@ -80,7 +80,7 @@ jobs:
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: app/build/outputs/apk/ciRelease/app-ciRelease.apk
-        asset_name: SyncClipboard-${{ env.VERSION_NAME }}.apk
+        asset_name: SyncClipboard-${{ env.VERSION_NAME }}-signed.apk
         asset_content_type: application/vnd.android.package-archive
       
     - name: 上传未签名 APK 到 Release
