chore(release): 更新发布工作流以简化APK上传
- 移除旧的创建release和上传资产步骤
- 使用softprops/action-gh-release统一处理release创建和文件上传
- 重命名APK文件以匹配版本名称
- 确保上传签名和未签名APK文件
- 清理敏感文件步骤保持不变

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,36 +62,24 @@ jobs:
         name: unsigned-apk-${{ env.VERSION_NAME }}
         path: app/build/outputs/apk/unsignedRelease/app-unsignedRelease-unsigned.apk
         
-    - name: 创建 Release
-      id: create_release
-      uses: actions/create-release@v2
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUBTOKEN }}
+    - name: 重命名 APK 文件
+      run: |
+        cp app/build/outputs/apk/ciRelease/app-ciRelease.apk SyncClipboard-${{ env.VERSION_NAME }}-signed.apk
+        cp app/build/outputs/apk/unsignedRelease/app-unsignedRelease-unsigned.apk SyncClipboard-${{ env.VERSION_NAME }}-unsigned.apk
+      
+    - name: 创建 Release 并上传资产
+      uses: softprops/action-gh-release@v1
       with:
         tag_name: ${{ env.TAG_NAME }}
-        release_name: ${{ env.VERSION_NAME }}
+        name: Release ${{ env.VERSION_NAME }}
         draft: false
         prerelease: ${{ env.PRE_RELEASE }}
-        
-    - name: 上传 APK 到 Release
-      uses: actions/upload-release-asset@v2
+        files: |
+          SyncClipboard-${{ env.VERSION_NAME }}-signed.apk
+          SyncClipboard-${{ env.VERSION_NAME }}-unsigned.apk
+        fail_on_unmatched_files: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUBTOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: app/build/outputs/apk/ciRelease/app-ciRelease.apk
-        asset_name: SyncClipboard-${{ env.VERSION_NAME }}-signed.apk
-        asset_content_type: application/vnd.android.package-archive
-      
-    - name: 上传未签名 APK 到 Release
-      uses: actions/upload-release-asset@v2
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUBTOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: app/build/outputs/apk/unsignedRelease/app-unsignedRelease-unsigned.apk
-        asset_name: SyncClipboard-${{ env.VERSION_NAME }}-unsigned.apk
-        asset_content_type: application/vnd.android.package-archive
       
     - name: 清理敏感文件
       run: rm app/release-key.jks
