--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,7 +71,7 @@ jobs:
       uses: softprops/action-gh-release@v1
       with:
         tag_name: ${{ env.TAG_NAME }}
-        name: Release ${{ env.VERSION_NAME }}
+        name: ${{ env.TAG_NAME }}
         draft: false
         prerelease: ${{ env.PRE_RELEASE }}
         files: |
